[Heavy] Adds heavy_scheme
  - Adds HeavyScheme Lexer
  - Adds HeavyScheme Parser
  - Adds HeavyScheme Evaluator
  - Adds top level decl for heavy_scheme

--- a/clang/lib/Lex/CMakeLists.txt
+++ b/clang/lib/Lex/CMakeLists.txt
@@ -6,6 +6,7 @@ add_clang_library(clangLex
   DependencyDirectivesSourceMinimizer.cpp
   HeaderMap.cpp
   HeaderSearch.cpp
+  HeavySchemeLexer.cpp
   Lexer.cpp
   LiteralSupport.cpp
   MacroArgs.cpp
