[Heavy] Adds missing deps for heavy_scheme

--- a/clang/lib/Parse/CMakeLists.txt
+++ b/clang/lib/Parse/CMakeLists.txt
@@ -10,6 +10,7 @@ add_clang_library(clangParse
   ParseCXXInlineMethods.cpp
   ParseDecl.cpp
   ParseDeclCXX.cpp
+  ParseDeclHeavy.cpp
   ParseExpr.cpp
   ParseExprCXX.cpp
   ParseInit.cpp
