--- a/heavy/CMakeLists.txt
+++ b/heavy/CMakeLists.txt
@@ -6,9 +6,8 @@ if(POLICY CMP0075)
 endif()
 
 set(HEAVY_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-set(CLANG_LIB ${LLVM_EXTERNAL_CLANG_SOURCE_DIR}/lib)
+set(CLANG_LIB ../clang/lib)
 include_directories(BEFORE
                     ${CMAKE_CURRENT_SOURCE_DIR}/include
-                    ${LLVM_EXTERNAL_CLANG_SOURCE_DIR}/include
-                    ${CMAKE_BINARY_DIR}/tools/clang/include)
+                    ../clang/include)
 add_subdirectory(tools/heavy)
