--- a/heavy/tools/heavy/CMakeLists.txt
+++ b/heavy/tools/heavy/CMakeLists.txt
@@ -7,13 +7,9 @@ endif()
 add_llvm_executable(heavy heavy_main.cpp
              ${HEAVY_LIB}/HeavyScheme.cpp
              ${HEAVY_LIB}/Lexer.cpp
-             ${HEAVY_LIB}/Parser.cpp)
+             ${HEAVY_LIB}/Parser.cpp
+             ${HEAVY_LIB}/../../clang/lib/Basic/CharInfo.cpp)
 
-target_link_libraries(heavy
-  PRIVATE
-  clangBasic
-  ${LLVM_COMMON_LIBS})
-
-# ClangDiagnosticCommon for some *.inc file
-add_dependencies(heavy ClangDiagnosticCommon)
+llvm_map_components_to_libnames(LLVM_LIBS core support)
+target_link_libraries(heavy PRIVATE ${LLVM_LIBS})
             
