--- a/heavy/tools/heavy-scheme/CMakeLists.txt
+++ b/heavy/tools/heavy-scheme/CMakeLists.txt
@@ -6,6 +6,12 @@ add_llvm_executable(heavy-scheme heavy_main.cpp
              ${HEAVY_LIB}/Parser.cpp
              ${HEAVY_LIB}/../../clang/lib/Basic/CharInfo.cpp)
 
-llvm_map_components_to_libnames(LLVM_LIBS core support)
-target_link_libraries(heavy-scheme PRIVATE ${LLVM_LIBS})
+llvm_map_components_to_libnames(LLVM_LIBS
+  core
+  support)
+
+set(MLIR_LIBS
+  MLIRIR)
+
+target_link_libraries(heavy-scheme PRIVATE ${LLVM_LIBS} ${MLIR_LIBS})
             
