[Heavy] Adds more provisional OpEval stuff

--- a/heavy/tools/heavy-scheme/CMakeLists.txt
+++ b/heavy/tools/heavy-scheme/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.4.3)
 add_llvm_executable(heavy-scheme heavy_main.cpp
              ${HEAVY_LIB}/HeavyScheme.cpp
              ${HEAVY_LIB}/Lexer.cpp
+             ${HEAVY_LIB}/OpGen.cpp
              ${HEAVY_LIB}/Parser.cpp
              ${HEAVY_LIB}/../../clang/lib/Basic/CharInfo.cpp)
 
