[Heavy] Improves compiling of provisional OpGen

--- a/heavy/tools/heavy-scheme/CMakeLists.txt
+++ b/heavy/tools/heavy-scheme/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.4.3)
 
 add_llvm_executable(heavy-scheme heavy_main.cpp
+             ${HEAVY_LIB}/OpGen.cpp
              ${HEAVY_LIB}/HeavyScheme.cpp
              ${HEAVY_LIB}/Lexer.cpp
-             ${HEAVY_LIB}/OpGen.cpp
              ${HEAVY_LIB}/Parser.cpp
              ${HEAVY_LIB}/../../clang/lib/Basic/CharInfo.cpp)
 
@@ -12,7 +12,10 @@ llvm_map_components_to_libnames(LLVM_LIBS
   support)
 
 set(MLIR_LIBS
-  MLIRIR)
+  MLIRAnalysis
+  MLIRIR
+  MLIRSideEffectInterfaces
+  MLIRTransforms)
 
 target_link_libraries(heavy-scheme PRIVATE ${LLVM_LIBS} ${MLIR_LIBS})
             
