[Heavy] Refactors quasiquote (provisional)

--- a/heavy/lib/CMakeLists.txt
+++ b/heavy/lib/CMakeLists.txt
@@ -8,6 +8,7 @@ add_llvm_library(heavy
   ${HEAVY_LIB}/HeavyScheme.cpp
   ${HEAVY_LIB}/Lexer.cpp
   ${HEAVY_LIB}/Parser.cpp
+  ${HEAVY_LIB}/Quasiquote.cpp
   ${HEAVY_LIB}/../../clang/lib/Basic/CharInfo.cpp)
 
 add_dependencies(heavy HeavyOpsIncGen)
