Add heavy-scheme install target

--- a/heavy/tools/heavy-scheme/CMakeLists.txt
+++ b/heavy/tools/heavy-scheme/CMakeLists.txt
@@ -5,3 +5,6 @@ llvm_map_components_to_libnames(LLVM_LIBS core support)
 
 target_link_libraries(heavy-scheme PRIVATE heavy ${LLVM_LIBS})
             
+add_llvm_install_targets(install-heavy-scheme
+  DEPENDS heavy-scheme
+  COMPONENT heavy-scheme)
