--- a/heavy/CMakeLists.txt
+++ b/heavy/CMakeLists.txt
@@ -1,16 +1,14 @@
 cmake_minimum_required(VERSION 3.13.4)
 
-include(AddLLVM)
+list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
+include(AddHeavy)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
-set(MLIR_TABLEGEN_EXE $<TARGET_FILE:mlir-tblgen>)
+#set(MLIR_TABLEGEN_EXE $<TARGET_FILE:mlir-tblgen>)
 
 if(POLICY CMP0075)
   cmake_policy(SET CMP0075 NEW)
 endif()
 
-set(HEAVY_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-set(HEAVY_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(HEAVY_GEN_INC ${CMAKE_BINARY_DIR}/tools/heavy/include)
 set(CLANG_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../clang/lib)
 include_directories(BEFORE
@@ -25,3 +23,5 @@ add_subdirectory(lib)
 add_subdirectory(tools/heavy-scheme)
 add_subdirectory(test)
 add_subdirectory(unittests)
+
+add_subdirectory(cmake/modules)
